# census_getter

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
census_getter/: __init__.py  census_helpers.py  run.py  settings.yaml  util.py
census_getter/data/: ofm_control_totals.csv  ofm_shares.csv
census_getter/steps/: __init__.py  apply_acs_shares.py  create_controls_table.py  create_puma_geog_lookup.py  get_acs_data.py  input_pre_processor.py  load_data.py  prepare_pums.py  puma_county_lookup.py  pums_download.py  run_populationsim.py  write_tables.py
census_getter/util/: util.py
example_psrc/: run_census_getter.py
example_psrc/configs/: census_getter_expressions.csv  logging.yaml  ofm_shares.csv  settings.yaml
example_psrc/data/: puma_geog_lookup.csv
examples/: .gitignore
examples/population_synthesizer/: .gitignore  pyproject.toml  run.py
examples/population_synthesizer/configs_census_getter/: census_getter_expressions.csv  ofm_shares.csv  settings.yaml
examples/population_synthesizer/configs_popsim/: controls.csv  controls_3race.csv  settings.yaml
examples/population_synthesizer/data/: hh_size_2020_dc.csv  ofm_control_totals.csv  puma_geog_lookup.csv  travel_survey_industry_crosswalk.xlsx
examples/psrc/: pyproject.toml  run.py  run_census_getter.py
examples/psrc/configs/: census_getter_expressions.csv  environment.yml  settings.yaml
examples/psrc/data/: .gitignore  hh_size_control_totals.csv  puma_geog_lookup.csv
examples/remi_hh_forecast_test/: pyproject.toml  run.py  scratch.ipynb
examples/remi_hh_forecast_test/configs_census_getter/: census_getter_expressions.csv  settings.yaml
examples/remi_hh_forecast_test/configs_popsim/: controls.csv  settings.yaml
examples/remi_hh_forecast_test/data/: .gitignore  puma_geog_lookup_cnty.csv
examples/simple_acs_download/: pyproject.toml  run.py
examples/simple_acs_download/configs/: settings.yaml
examples/simple_acs_download/data/: .gitignore
