[project]
name = "census-getter"
version = "0.0.1"
description = "ACS Data to Pandas Dataframes"
authors = [
    {name = "PSRC", email = "scoe@psrc.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "activitysim==1.2.1",
    "census",
    "numpy==1.23.4",
    "setuptools",
    "us"
]

[project.scripts]
census-getter = "census_getter.cli.main:main"

[tool.uv] # <--- Added the correct table header
package = true # <--- Now correctly scoped under [tool.uv]


