[project]
name = "census-getter"
version = "1.1"
description = "ACS Data to Pandas Dataframes"
authors = [
    {name = "PSRC", email = "scoe@psrc.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "census",
    "pandas",
    "numpy>1.23.4",
    "tables>=3.10.2",
    "pyyaml>=6.0.3",
    "pypyr",
    "us"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"