[project]
name = "census-getter"
version = "1.1"
description = "ACS Data to Pandas Dataframes"
authors = [
    {name = "PSRC", email = "scoe@psrc.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "census",
    "numpy>1.23.4",
    "tables>=3.10.2",
    "pyyaml>=6.0.3",
    "pypyr",
    "us",
    "geopandas>=1.1.2",
    "populationsim>=0.10.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.uv.sources]
census = { git = "https://github.com/datamade/census.git" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
