[project]
name = "population-synthesizer-pypyr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "census>=0.8.25",
    "pandas>=2.3.3",
    "populationsim>=0.10.0",
    "pypyr>=5.9.1",
    "pyyaml>=6.0.3",
    "tables>=3.10.2",
    "us>=3.2.0",
    "pyyaml>=6.0.3",
]
